AzureDevOpsDemo/deployment/webapi1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapi1
  template:
    
    metadata:
      labels:
        app: webapi1
    spec:
      securityContext:
        fsGroup: 2000 
      containers:
      - name: webapi1
        image: thanhnmitc/webapi1
        ports:
        - name: webapi1https
          containerPort: 443
        volumeMounts:
        - name: config-volume
          mountPath: /app/DataProtection-Keys
          readOnly: true
      volumes:
      - name: pfx-certificate
        secret:
          secretName: aspnetapppfx
      - name: config-volume
        configMap:
          name: aspnetappcer
