AzureDevOpsDemo/deployment/webapi1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp1-service
spec:
  selector:
    app: webapi1
  ports:
    - protocol: TCP
      port: 10443
      targetPort: 443
